# playground

./: .gitignore  README.md  Untitled Diagram.drawio  branchadd.ts  c.js  class-diagram.drawio  code.js  code.ts  demo.py  index.html  ls.txt  newdemo.js  newscript.js  pom.xml  process.drawio  script.js  tswrongsyntax.ts
C/: a.c  a.out
Cpp/: .gitignore  CMakeLists.txt  Makefile  a.cpp  foo.cpp  foo.pc  functions.h  lib  main.c  main.cpp  sub.c
Cpp/foo/: CMakeLists.txt  math.h
Cpp/hello-cmake/program/: CMakeLists.txt  main.cpp
Cpp/hello-cmake/program/foo/: CMakeLists.txt  foo.pc  sub.cpp
JavaCode/: pom.xml
JavaCode/blog-article/: pom.xml
Shell-Script/: dayendwithshell.sh  input.txt  output.txt  script.sh
blog-article/: pom.xml
dotnet/: code.cs
dotnet/boxA/: Program.cs
hello-everything/hello-nextjs/: .env  .gitignore  package-lock.json  package.json  tsconfig.json
hello-everything/hello-nextjs/app/: page.tsx
hello-everything/hello-nextjs/pages/: sample.tsx
hello-everything/nextjs-demo/: .eslintrc.json  .gitignore  package-lock.json  package.json  text.md
hello-everything/nextjs-demo/components/: layout.js
hello-everything/py-demo/: pyvenv.cfg  script.py
java/JavaCode/deployment/: pom.xml
java/SomeCode/: code.xml  pom.xml
java/code/: pom.xml
lua/: add.lua  make_oklab_palette.lua  palette.json  script.lua
lua/mod/: add.lua  init.lua  sub.lua
nodejs/: code.js  code.ts
nodejs/jsdashboard/: package-lock.json  package.json
nodejs/metaverse/: package-lock.json  package.json
nodejs/nextjsdemo/: .eslintrc.json  package-lock.json  package.json
nodejs/react-resume/: package-lock.json  package.json
nodejs/reactdemo/: package-lock.json  package.json  webpack.config.js
nodejs/sample/: .eslintrc.cjs  NewToAdd.ts  Test.ts  ZipCodeValidator.ts  branchadd.ts  code.js  code.ts  demo.js  filereaddemo.js  index.html  package-lock.json  package.json  snowpack.config.js  test.js
nodejs/vue-resume/: .eslintrc.cjs  chat-text.md  package-lock.json  package.json  tailwind.config.cjs
nodejs/webpackdemo/: package.json
python/: .env  chat-text.md  foo.py  requirements.txt  script.py  singlefile.py  test.py
python/color-science/: cie1931.ipynb  cie1931.py  conversion.py  data.py  find_xterm_color.py  palette.json  spectral_sensitivity_curve.py
(+372 files in other folders)
